finish css layout

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,27 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
+@import "~normalize.css";
+
+@import 'header.scss';
+@import 'toolbar.scss';
+@import 'formula.scss';
+@import 'table.scss';
+@import 'dashboard.scss';
+
+*{
   margin: 0;
   padding: 0;
-  background: red;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  
+}
+.excel {
+  position: relative;
+  color: #888;
+  height: 100%;
+  max-width: 100%;
+  font-size: .8rem;
 }
